# WeBalanceBored

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_test.md
.github/workflows/: ci.yml
crates/balance-board-bridge/: Cargo.toml
crates/balance-board-bridge/src/: cache.rs  main.rs  vjoy.rs
crates/balance-board-io/: Cargo.toml
crates/balance-board-io/examples/: list_hid_devices.rs  print_sensors.rs
crates/balance-board-io/src/: hidapi_source.rs  lib.rs  read_transaction.rs
crates/balance-board-pair/: Cargo.toml
crates/balance-board-pair/src/: bluetooth.rs  lib.rs  main.rs  pin.rs
crates/balance-board-protocol/: Cargo.toml  README.md
crates/balance-board-protocol/src/: buttons.rs  calibration.rs  cog.rs  error.rs  filter.rs  lib.rs  report.rs  sensors.rs
docs/steam-input/: superflight.md
