[package]
name = "balance-board-io"
version = "0.1.0"
description = "HID I/O for the Wii Balance Board. Cross-platform via hidapi (Windows, macOS, Linux)."
license = "MPL-2.0"
keywords = ["wii", "balance-board", "wiimote", "hid", "bluetooth"]
categories = ["hardware-support"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
balance-board-protocol = { path = "../balance-board-protocol", version = "0.1.0" }
hidapi = "2.6"

[lints.rust]
missing_docs = "warn"
